--- a/App.Frontend/src/app/features/system-admin/modules/universities/components/faculty-form/faculty-dialog-form.component.html
+++ b/App.Frontend/src/app/features/system-admin/modules/universities/components/faculty-form/faculty-dialog-form.component.html
@@ -1,53 +1,87 @@
 <app-dialog #dialog dialogId="facultyModal">
-
-  <span dialog-title>faculty</span>
+  <span dialog-title>{{ "faculties.dialog.title" | translate }}</span>
 
   <div dialog-body>
     <form [formGroup]="form" (ngSubmit)="submit()">
-
       <div class="mb-3">
-        <label for="name" class="form-label">name</label>
-        <input type="text" class="form-control" formControlName="name" id="name" aria-describedby="emailHelp"
-          placeholder="Enter your name">
+        <label for="name" class="form-label">
+          {{ "faculties.dialog.name" | translate }}
+        </label>
+        <input
+          type="text"
+          class="form-control"
+          formControlName="name"
+          id="name"
+          placeholder="{{ 'faculties.dialog.placeholders.name' | translate }}"
+        />
         <app-error [control]="name"></app-error>
       </div>
 
       <div class="mb-3">
-        <label for="description" class="form-label">description</label>
-        <input type="text" class="form-control" formControlName="description" id="description"
-          aria-describedby="description" placeholder="Enter your description">
+        <label for="description" class="form-label">
+          {{ "faculties.dialog.description" | translate }}
+        </label>
+        <input
+          type="text"
+          class="form-control"
+          formControlName="description"
+          id="description"
+          placeholder="{{
+            'faculties.dialog.placeholders.description' | translate
+          }}"
+        />
         <app-error [control]="description"></app-error>
       </div>
 
-
       <div class="mb-3">
-        <label for="address" class="form-label">address</label>
-        <input type="text" class="form-control" formControlName="address" id="address" aria-describedby="address"
-          placeholder="Enter your address">
+        <label for="address" class="form-label">
+          {{ "faculties.dialog.address" | translate }}
+        </label>
+        <input
+          type="text"
+          class="form-control"
+          formControlName="address"
+          id="address"
+          placeholder="{{
+            'faculties.dialog.placeholders.address' | translate
+          }}"
+        />
         <app-error [control]="address"></app-error>
       </div>
 
       <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email</label>
-        <input type="email" class="form-control" formControlName="email" id="exampleInputEmail1"
-          aria-describedby="emailHelp" placeholder="Enter your Email">
+        <label for="email" class="form-label">
+          {{ "faculties.dialog.email" | translate }}
+        </label>
+        <input
+          type="email"
+          class="form-control"
+          formControlName="email"
+          id="email"
+          placeholder="{{ 'faculties.dialog.placeholders.email' | translate }}"
+        />
         <app-error [control]="email"></app-error>
       </div>
 
       <div class="mb-3">
-        <label for="website" class="form-label">website</label>
-        <input type="text" class="form-control" formControlName="website" id="website" aria-describedby="website"
-          placeholder="Enter your website">
+        <label for="website" class="form-label">
+          {{ "faculties.dialog.website" | translate }}
+        </label>
+        <input
+          type="text"
+          class="form-control"
+          formControlName="website"
+          id="website"
+          placeholder="{{
+            'faculties.dialog.placeholders.website' | translate
+          }}"
+        />
         <app-error [control]="website"></app-error>
       </div>
 
-      <button class="btn btn-primary">Save</button>
-
+      <button class="btn btn-primary">
+        {{ "faculties.dialog.save" | translate }}
+      </button>
     </form>
   </div>
-
 </app-dialog>
-
-
-
-
