--- a/App.Frontend/src/app/features/system-admin/modules/universities/components/universities-grid/universities-grid.component.html
+++ b/App.Frontend/src/app/features/system-admin/modules/universities/components/universities-grid/universities-grid.component.html
@@ -1,13 +1,19 @@
 <!--Include Disable-->
 <div class="filter-group mb-4" style="width: fit-content">
-  <label class="form-label">Show Status</label>
+  <label class="form-label">
+    {{ "universities.grid.showStatus" | translate }}
+  </label>
   <select
     class="form-select form-select-sm"
     [(ngModel)]="includeDisabled"
     (change)="handleChangeIncludeDisabled()"
   >
-    <option [ngValue]="false">Active Only</option>
-    <option [ngValue]="true">All University</option>
+    <option [ngValue]="false">
+      {{ "universities.grid.activeOnly" | translate }}
+    </option>
+    <option [ngValue]="true">
+      {{ "universities.grid.allUniversities" | translate }}
+    </option>
   </select>
 </div>
 
@@ -15,12 +21,12 @@
 <app-table>
   <tr table-header>
     <th scope="col">#</th>
-    <th scope="col">Name</th>
-    <th scope="col">Description</th>
-    <th scope="col">Address</th>
-    <th scope="col">Email</th>
-    <th scope="col">Website</th>
-    <th scope="col">IsDeleted</th>
+    <th scope="col">{{ "universities.grid.name" | translate }}</th>
+    <th scope="col">{{ "universities.grid.description" | translate }}</th>
+    <th scope="col">{{ "universities.grid.address" | translate }}</th>
+    <th scope="col">{{ "universities.grid.email" | translate }}</th>
+    <th scope="col">{{ "universities.grid.website" | translate }}</th>
+    <th scope="col">{{ "universities.grid.isDeleted" | translate }}</th>
     <th scope="col"></th>
     <th scope="col"></th>
   </tr>
@@ -51,6 +57,7 @@
         (click)="restore(university.id)"
         class="fa-solid fa-retweet text-primary"
       ></i>
+
       <i
         *ngIf="
           !university.isDeleted &&
@@ -70,8 +77,9 @@
             permissions.universities.updateUniversities
           )
         "
-        ><i class="fa-solid fa-pen-to-square"></i
-      ></a>
+      >
+        <i class="fa-solid fa-pen-to-square"></i>
+      </a>
     </td>
   </tr>
 </app-table>
