--- a/App.Frontend/src/app/features/system-admin/modules/universities/components/university-dialog/university-dialog.component.html
+++ b/App.Frontend/src/app/features/system-admin/modules/universities/components/university-dialog/university-dialog.component.html
@@ -1,72 +1,93 @@
 <app-dialog #dialog dialogId="exampleModal">
-  <span dialog-title>Create University</span>
+  <span dialog-title>
+    {{ "universities.dialog.title" | translate }}
+  </span>
+
   <div dialog-body>
     <form [formGroup]="form" (ngSubmit)="Submit()">
       <div class="mb-3">
-        <label for="name" class="form-label">name</label>
+        <label for="name" class="form-label">
+          {{ "universities.dialog.name" | translate }}
+        </label>
         <input
           type="text"
           class="form-control"
           formControlName="name"
           id="name"
-          aria-describedby="emailHelp"
-          placeholder="Enter your name"
+          placeholder="{{
+            'universities.dialog.placeholders.name' | translate
+          }}"
         />
         <app-error [control]="name"></app-error>
       </div>
 
       <div class="mb-3">
-        <label for="description" class="form-label">description</label>
+        <label for="description" class="form-label">
+          {{ "universities.dialog.description" | translate }}
+        </label>
         <input
           type="text"
           class="form-control"
           formControlName="description"
           id="description"
-          aria-describedby="description"
-          placeholder="Enter your description"
+          placeholder="{{
+            'universities.dialog.placeholders.description' | translate
+          }}"
         />
         <app-error [control]="description"></app-error>
       </div>
 
       <div class="mb-3">
-        <label for="address" class="form-label">address</label>
+        <label for="address" class="form-label">
+          {{ "universities.dialog.address" | translate }}
+        </label>
         <input
           type="text"
           class="form-control"
           formControlName="address"
           id="address"
-          aria-describedby="address"
-          placeholder="Enter your address"
+          placeholder="{{
+            'universities.dialog.placeholders.address' | translate
+          }}"
         />
         <app-error [control]="address"></app-error>
       </div>
 
       <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email</label>
+        <label for="email" class="form-label">
+          {{ "universities.dialog.email" | translate }}
+        </label>
         <input
           type="email"
           class="form-control"
           formControlName="email"
-          id="exampleInputEmail1"
-          aria-describedby="emailHelp"
-          placeholder="Enter your Email"
+          id="email"
+          placeholder="{{
+            'universities.dialog.placeholders.email' | translate
+          }}"
         />
         <app-error [control]="email"></app-error>
       </div>
 
       <div class="mb-3">
-        <label for="website" class="form-label">website</label>
+        <label for="website" class="form-label">
+          {{ "universities.dialog.website" | translate }}
+        </label>
         <input
           type="text"
           class="form-control"
           formControlName="website"
           id="website"
-          aria-describedby="website"
-          placeholder="Enter your website"
+          placeholder="{{
+            'universities.dialog.placeholders.website' | translate
+          }}"
         />
         <app-error [control]="website"></app-error>
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+
+      <button type="submit" class="btn btn-primary">
+        {{ "universities.dialog.submit" | translate }}
+      </button>
     </form>
   </div>
 </app-dialog>
