--- a/App.Frontend/src/app/features/admin/modules/university/pages/university-page/university-page.component.html
+++ b/App.Frontend/src/app/features/admin/modules/university/pages/university-page/university-page.component.html
@@ -7,14 +7,14 @@
       >
         <div class="d-flex">
           <i
-            class="fa-solid fa-building-columns mb-2 mb-md-0 rounded-3 d-flex justify-content-center me-2 bg-light"
+            class="fa-solid fa-building-columns mb-2 mb-md-0 rounded-3 d-flex justify-content-center bg-light m-inline-end-2"
           ></i>
           <div class="d-flex flex-column justify-content-between">
             <h2 class="mb-md-0 uni-title fw-normal">
               {{ "section.name" | translate }}
             </h2>
             <div class="d-flex">
-              <span class="fw-normal shared-font me-3 mb-2 mb-md-0">
+              <span class="fw-normal shared-font mb-2 mb-md-0 m-inline-end-3">
                 <i class="fa-regular fa-calendar"></i>
                 {{ "section.established" | translate }}
               </span>
@@ -26,12 +26,14 @@
           </div>
         </div>
         <div class="d-flex">
-          <button class="setting bg-white fw-normal rounded-2 px-3 py-2 me-3">
-            <i class="fa-solid fa-gear me-2"></i>
+          <button
+            class="setting bg-white fw-normal rounded-2 px-3 py-2 m-inline-end-3"
+          >
+            <i class="fa-solid fa-gear m-inline-end-2"></i>
             {{ "section.setting" | translate }}
           </button>
           <button class="edit-profile text-white fw-normal rounded-2 px-3 py-2">
-            <i class="fa-solid fa-edit me-2"></i>
+            <i class="fa-solid fa-edit m-inline-end-2"></i>
             {{ "section.editProfile" | translate }}
           </button>
         </div>
@@ -117,7 +119,7 @@
             >
               <div class="d-flex">
                 <i
-                  class="d-flex justify-content-center align-items-center fa-solid text-white fa-star me-2 rounded-circle p-3"
+                  class="d-flex justify-content-center align-items-center fa-solid text-white fa-star rounded-circle p-3 m-inline-end-2"
                 ></i>
                 <div class="d-flex flex-column mb-2">
                   <h4 class="mb-0 fw-normal">
@@ -140,7 +142,7 @@
             >
               <div class="d-flex">
                 <i
-                  class="d-flex justify-content-center align-items-center fa-solid text-white fa-graduation-cap me-2 rounded-circle p-3"
+                  class="d-flex justify-content-center align-items-center fa-solid text-white fa-graduation-cap m-inline-end-2 rounded-circle p-3"
                 ></i>
                 <div class="d-flex flex-column mb-2">
                   <h4 class="mb-0 fw-normal">
@@ -163,7 +165,7 @@
             >
               <div class="d-flex">
                 <i
-                  class="d-flex justify-content-center align-items-center fa-solid text-white fa-lightbulb me-2 rounded-circle p-3"
+                  class="d-flex justify-content-center align-items-center fa-solid text-white fa-lightbulb m-inline-end-2 rounded-circle p-3"
                 ></i>
                 <div class="d-flex flex-column mb-2">
                   <h4 class="mb-0 fw-normal">
@@ -186,7 +188,7 @@
             >
               <div class="d-flex">
                 <i
-                  class="d-flex justify-content-center align-items-center fa-solid text-white fa-arrow-trend-up me-2 rounded-circle p-3"
+                  class="d-flex justify-content-center align-items-center fa-solid text-white fa-arrow-trend-up m-inline-end-2 rounded-circle p-3"
                 ></i>
                 <div class="d-flex flex-column mb-2">
                   <h4 class="mb-0 fw-normal">
@@ -320,7 +322,7 @@
         data-bs-toggle="modal"
         data-bs-target="#addFaculty"
       >
-        <i class="fa-solid fa-plus me-2"></i>
+        <i class="fa-solid fa-plus m-inline-end-2"></i>
         {{ "org.addNewUnit" | translate }}
       </button>
     </div>
@@ -351,40 +353,40 @@
           </div>
 
           <div class="d-flex flex-column my-3">
-            <div class="mb-2 d-flex">
+            <div class="mb-2 d-flex justify-content-between">
               <span class="detail-1 fw-normal">
                 {{ "faculty.head.label" | translate }}
               </span>
-              <span class="ms-auto detail-2 fw-normal">
+              <span class="detail-2 fw-normal">
                 {{ "faculty.head.name" | translate }}
               </span>
             </div>
-            <div class="mb-2 d-flex">
+            <div class="mb-2 d-flex justify-content-between">
               <span class="detail-1 fw-normal">
                 {{ "faculty.staff.label" | translate }}
               </span>
-              <span class="ms-auto detail-2 fw-normal">
-                <i class="far fa-user me-1"></i>
+              <span class="detail-2 fw-normal">
+                <i class="far fa-user m-inline-end-1"></i>
                 {{ "faculty.staff.count" | translate }}
               </span>
             </div>
-            <div class="mb-2 d-flex">
+            <div class="mb-2 d-flex justify-content-between">
               <span class="detail-1 fw-normal">
                 {{ "faculty.students.label" | translate }}
               </span>
-              <span class="ms-auto detail-2 fw-normal">
-                <i class="fas fa-graduation-cap me-1"></i>
+              <span class="detail-2 fw-normal">
+                <i class="fas fa-graduation-cap m-inline-end-1"></i>
                 {{ "faculty.students.count" | translate }}
               </span>
             </div>
           </div>
 
           <div class="faculty-item-analysis py-2">
-            <div class="mb-2 d-flex">
+            <div class="mb-2 d-flex justify-content-between">
               <span class="detail-1 fw-normal">
                 {{ "faculty.performance.label" | translate }}
               </span>
-              <span class="ms-auto detail-2 fw-normal">
+              <span class="detail-2 fw-normal">
                 {{ "faculty.performance.value" | translate }}
               </span>
             </div>
@@ -434,40 +436,40 @@
           </div>
 
           <div class="d-flex flex-column my-3">
-            <div class="mb-2 d-flex">
+            <div class="mb-2 d-flex justify-content-between">
               <span class="detail-1 fw-normal">
                 {{ "faculty_med.head.label" | translate }}
               </span>
-              <span class="ms-auto detail-2 fw-normal">
+              <span class="detail-2 fw-normal">
                 {{ "faculty_med.head.name" | translate }}
               </span>
             </div>
-            <div class="mb-2 d-flex">
+            <div class="mb-2 d-flex justify-content-between">
               <span class="detail-1 fw-normal">
                 {{ "faculty_med.staff.label" | translate }}
               </span>
-              <span class="ms-auto detail-2 fw-normal">
-                <i class="far fa-user me-1"></i>
+              <span class="detail-2 fw-normal">
+                <i class="far fa-user m-inline-end-1"></i>
                 {{ "faculty_med.staff.count" | translate }}
               </span>
             </div>
-            <div class="mb-2 d-flex">
+            <div class="mb-2 d-flex justify-content-between">
               <span class="detail-1 fw-normal">
                 {{ "faculty_med.students.label" | translate }}
               </span>
-              <span class="ms-auto detail-2 fw-normal">
-                <i class="fas fa-graduation-cap me-1"></i>
+              <span class="detail-2 fw-normal">
+                <i class="fas fa-graduation-cap m-inline-end-1"></i>
                 {{ "faculty_med.students.count" | translate }}
               </span>
             </div>
           </div>
 
           <div class="faculty-item-analysis py-2">
-            <div class="mb-2 d-flex">
+            <div class="mb-2 d-flex justify-content-between">
               <span class="detail-1 fw-normal">
                 {{ "faculty_med.performance.label" | translate }}
               </span>
-              <span class="ms-auto detail-2 fw-normal">
+              <span class="detail-2 fw-normal">
                 {{ "faculty_med.performance.value" | translate }}
               </span>
             </div>
@@ -514,40 +516,40 @@
           </div>
 
           <div class="d-flex flex-column my-3">
-            <div class="mb-2 d-flex">
+            <div class="mb-2 d-flex justify-content-between">
               <span class="detail-1 fw-normal">
                 {{ "faculty_sci.head.label" | translate }}
               </span>
-              <span class="ms-auto detail-2 fw-normal">
+              <span class="detail-2 fw-normal">
                 {{ "faculty_sci.head.name" | translate }}
               </span>
             </div>
-            <div class="mb-2 d-flex">
+            <div class="mb-2 d-flex justify-content-between">
               <span class="detail-1 fw-normal">
                 {{ "faculty_sci.staff.label" | translate }}
               </span>
-              <span class="ms-auto detail-2 fw-normal">
-                <i class="far fa-user me-1"></i>
+              <span class="detail-2 fw-normal">
+                <i class="far fa-user m-inline-end-1"></i>
                 {{ "faculty_sci.staff.count" | translate }}
               </span>
             </div>
-            <div class="mb-2 d-flex">
+            <div class="mb-2 d-flex justify-content-between">
               <span class="detail-1 fw-normal">
                 {{ "faculty_sci.students.label" | translate }}
               </span>
-              <span class="ms-auto detail-2 fw-normal">
-                <i class="fas fa-graduation-cap me-1"></i>
+              <span class="detail-2 fw-normal">
+                <i class="fas fa-graduation-cap m-inline-end-1"></i>
                 {{ "faculty_sci.students.count" | translate }}
               </span>
             </div>
           </div>
 
           <div class="faculty-item-analysis py-2">
-            <div class="mb-2 d-flex">
+            <div class="mb-2 d-flex justify-content-between">
               <span class="detail-1 fw-normal">
                 {{ "faculty_sci.performance.label" | translate }}
               </span>
-              <span class="ms-auto detail-2 fw-normal">
+              <span class="detail-2 fw-normal">
                 {{ "faculty_sci.performance.value" | translate }}
               </span>
             </div>
