--- a/App.Frontend/src/app/shared/components/dialog/dialog.component.html
+++ b/App.Frontend/src/app/shared/components/dialog/dialog.component.html
@@ -9,7 +9,7 @@
 <div class="modal fade" [id]="dialogId" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
-      <div class="modal-header">
+      <div class="modal-header d-flex justify-content-between">
         <h5 class="modal-title">
           <ng-content select="[dialog-title]"></ng-content>
         </h5>
