--- a/App.Frontend/src/styles.css
+++ b/App.Frontend/src/styles.css
@@ -34,11 +34,13 @@ ul {
   --two-rem: 2rem;
   --two_half-rem: 2.5rem;
   --three-rem: 3rem;
+  --v-4px: 4px;
   --v-8px: 8px;
   --v-10px: 10px;
   --v-12px: 12px;
   --v-13px: 13px;
   --v-15px: 15px;
+  --v-16px: 16px;
   --v-20px: 20px;
   --v-32px: 32px;
   --fz-8: 8px;
